--- a/study.html
+++ b/study.html
@@ -67,11 +67,11 @@
             <article class="teacher-item">
                 <header>
                     <img 
-                        src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" 
-                        alt="Diego Fernandes">
+                        src="https://avatars0.githubusercontent.com/u/46210532?s=460&u=0fcf1f629bc0e6c6a0b8e0b97b017761a134dc52&v=4" 
+                        alt="Alisson Silva">
                     <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
+                        <strong>Alisson Silva</strong>
+                        <span>Matematica</span>
                     </div>
                 </header>
             
